Fixes form homepage on small screen

--- a/style/base.css
+++ b/style/base.css
@@ -134,6 +134,10 @@ form#download:before {
 
 @media only screen and (max-width: 767px) {
 
+form#download {
+	padding-bottom: 0;
+}
+
 #component-index {
 	padding-right: 20px;
 	padding-left: 20px;
@@ -686,6 +690,11 @@ html.js .postit.guide.closed {
 #documentation blockquote {
 	padding-left: 40px;
 	padding-top: 70px;
+	background-image: url(pattern-light-grain.png);
+	background-size: auto;
+	background-color: white;
+	height: 280px;
+	margin-bottom: -22px;
 }
 
 #documentation blockquote p {
